--- a/Manage-Landing/index.html
+++ b/Manage-Landing/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--*Style Sheet Link-->
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam:ital,wght@0,400;0,500;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/main.css">
+  <title>Manage Landing</title>
+</head>
+<body>
+  <div class="body">
+    <div class="nav-bar">
+      <!--*Logo Section-->
+      <div class="logo">
+        <img src="images/logo.svg" alt="">
+      </div>
+      <!--?Links Section-->
+      <div class="links">
+        <a href="#" class="nav-links">Pricing</a>
+        <a href="#" class="nav-links">Product</a>
+        <a href="#" class="nav-links">About Us</a>
+        <a href="#" class="nav-links">Careers</a>
+        <a href="#" class="nav-links">Community</a>
+      </div>
+      <!--TODO:Mobile Link Section-->
+      
+      <div class="get-started">
+        <button class='get-started-button'>Get Started</button>
+      </div>
 
-  </body>
+    </div>
+  </div>
+  
+</body>
 </html>
